--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "dev": "tsx ./src/index.ts -w",
     "test": "vitest"
   },
   "author": "Ana Flavia Fernandes Ribeiro",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "axios": "^1.5.1",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
